--- a/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
+++ b/SistemaHospitalUNI/src/MenuSistema/SistemaPrincipal.form
@@ -33,6 +33,9 @@
               <SubComponents>
                 <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
                   <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/Imagenes/file_add 16x16.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Nueva Especialidad"/>
                   </Properties>
                   <Events>
@@ -182,6 +185,27 @@
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem11ActionPerformed"/>
+                  </Events>
+                </MenuItem>
+              </SubComponents>
+            </Menu>
+            <Menu class="javax.swing.JMenu" name="jMenu10">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/Imagenes/1436438357_medical_bag.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Enfermedad Cronica"/>
+              </Properties>
+              <SubComponents>
+                <MenuItem class="javax.swing.JMenuItem" name="jMenuItem12">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/Imagenes/file_add 16x16.png"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Agregar Enfermedad"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem12ActionPerformed"/>
                   </Events>
                 </MenuItem>
               </SubComponents>
